Add approval process and related entities
Add `ApprovalResult` and `ApprovalTemplate` for handling the approval process. Update `ApprovalSubmitDTO` to include Lombok annotations and remove redundant fields. Add `approval_status` to `House`, `Tenant`, and `TenantCheckout` entities. Update `ApprovalEventListener` to handle different business types and their approval status changes. Modify `TenantService` to use the new approval template for tenant check-in. Adjust `ApprovalService` and `ApprovalController` to fit the updated approval submission process.